# ChangeLog for dev-java/xalan
# Copyright 2002-2007 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-java/xalan/ChangeLog,v 1.77 2007/11/25 14:45:14 opfer Exp $

  25 Nov 2007; Christian Faulhammer <opfer@gentoo.org>
  xalan-2.7.0-r4.ebuild:
  stable x86, bug 199501

  25 Nov 2007; Samuli Suominen <drac@gentoo.org> xalan-2.7.0-r4.ebuild:
  amd64 stable wrt #199501

  25 Nov 2007; Krzysiek Pawlik <nelchael@gentoo.org> xalan-2.7.0-r4.ebuild:
  Stable on ppc, bug #199501.

  23 Nov 2007; Vlastimil Babka <caster@gentoo.org> xalan-2.7.0-r4.ebuild:
  Stop building javadoc from source because it needs excessive amounts of
  RAM+swap. Download and install them from the binary xalan distribution.

  23 Nov 2007; Markus Rothe <corsair@gentoo.org> xalan-2.7.0-r4.ebuild:
  Stable on ppc64; bug #199501

*xalan-2.7.0-r4 (26 May 2007)

  26 May 2007; Vlastimil Babka <caster@gentoo.org> -xalan-2.7.0-r2.ebuild,
  +xalan-2.7.0-r4.ebuild:
  Revbump to use new external xalan-serializer. Bug #156258.

  13 May 2007; Raúl Porcel <armin76@gentoo.org> xalan-2.7.0-r3.ebuild:
  x86 stable wrt bug 177567

  13 May 2007; Vlastimil Babka <caster@gentoo.org> xalan-2.7.0-r3.ebuild:
  Fix java-pkg_dosrc call so it doesn't produce warnings.

  13 May 2007; nixnut <nixnut@gentoo.org> xalan-2.7.0-r3.ebuild:
  Stable on ppc wrt bug 177567

  12 May 2007; William L. Thomson Jr. <wltjr@gentoo.org>
  xalan-2.7.0-r3.ebuild:
  Stable on amd64, bug #177567

  12 May 2007; Markus Rothe <corsair@gentoo.org> xalan-2.7.0-r3.ebuild:
  Stable on ppc64; bug #177567

  08 May 2007; Vlastimil Babka <caster@gentoo.org> xalan-2.7.0-r2.ebuild:
  Also remove unused bsf dep.

  08 May 2007; Vlastimil Babka <caster@gentoo.org> xalan-2.7.0-r3.ebuild:
  Remove unused bsf dep; update LICENSE to 2.0; style tweaks.

  05 Jan 2007; Vlastimil Babka <caster@gentoo.org> -files/xalan.script,
  -xalan-2.6.0-r2.ebuild, -xalan-2.6.0-r3.ebuild, -xalan-2.7.0-r1.ebuild: