@@ -1,5 +1,6 @@
 DIST xalan-j_2_7_0-bin.tar.gz 13516702 RMD160 54257bca9b2b2cfb86fd6974f0e8f6ec20f7d47f SHA1 cf88e553e8fa5b69df93bae06edb29952dac596a SHA256 878c8eb6eee1551ae430c2dba05426329856ffc0413b2017dd2d4ee648c5c5f7
 DIST xalan-j_2_7_0-src.tar.gz 6264659 RMD160 50d612f8750b6a2173883401b8566f700dcfb9f8 SHA1 d77adca82934b188c625b1f72aee715ab2b4348f SHA256 210843fb672b0c44138797d9d11b61c2f538b89400ce8be1f230cd666f70bb02
 EBUILD xalan-2.7.0-r4.ebuild 2715 RMD160 e470ed4db698b1aa59b5f83e72525d3ca987f589 SHA1 e9d174af257fdad5c288bade4730eafcdafb6132 SHA256 d796d40475b20023200e04c8378234abc7095dda528b7257f0087ac4e73cd18b
-MISC ChangeLog 11186 RMD160 1e9cfa5130fe8c2845957ec3b6555058ec43634d SHA1 f3f1b30a7811bc9e9e36d8019a3566d286c1ad04 SHA256 81802ea741a1583f3580192fbf3f2ab9104c8c4ca177b8deef5e04963afa604d
+EBUILD xalan-2.7.0-r5.ebuild 2630 RMD160 29cc05d29b659dd339b0575407133df656f60e87 SHA1 f09cbfcff2fbd8ea97cde7c57617a6a9858930c1 SHA256 876292e873085c2202f4be597c380e49eabfe5e0cc1dbca70352c175c9f4d765
+MISC ChangeLog 11522 RMD160 b1449d2579e272e1a33a269644c69c1461569ac3 SHA1 0773cb44c9af968f972b04ad0d57bd5a6b450a79 SHA256 d778fc4e7f7e7364b3bb2d35434d674f57bc3076ca2813e96cb43108f03a09ee
 MISC metadata.xml 157 RMD160 ab0b3741457dee7531f59c4da0f0e9e8399af084 SHA1 c37a6b9922aef61b5b3387655bccb6e3b16e0e26 SHA256 295d02c5805b0257938eb80314b371daac94b8d6ea85629a902de7a824adc0c9
