@@ -1,6 +1,16 @@
 # ChangeLog for dev-java/xalan
 # Copyright 2002-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-java/xalan/ChangeLog,v 1.77 2007/11/25 14:45:14 opfer Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-java/xalan/ChangeLog,v 1.79 2007/12/10 20:53:38 betelgeuse Exp $
+
+  10 Dec 2007; Petteri Räty <betelgeuse@gentoo.org> -xalan-2.7.0-r3.ebuild:
+  Remove old ebuild.
+
+*xalan-2.7.0-r5 (10 Dec 2007)
+
+  10 Dec 2007; Petteri Räty <betelgeuse@gentoo.org> xalan-2.7.0-r4.ebuild,
+  +xalan-2.7.0-r5.ebuild:
+  dev-java/jakarta-regexp is an indirect dependency via bcel so do not pull it
+  in directly here
 
   25 Nov 2007; Christian Faulhammer <opfer@gentoo.org>
   xalan-2.7.0-r4.ebuild:
